--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-wallet_descriptor=[d34db33f/44'/0'/0']xpub6ERApfZwUNrhL.......rBGRjaDMzQLcgJvLJuZZvRcEL/0/*
-
-
+WALLET_DESCRIPTOR="[d34db33f/44'/0'/0']xpub6ERApfZwUNrhL.......rBGRjaDMzQLcgJvLJuZZvRcEL/0/*"
